# Deep-Learning-2020-1

./: README.md
Alan Helal/: DeepLearning_UFESV3.ipynb  README.md  deeplearning_treinada.py  deeplearning_treinar-2.py
DeepLearningALPR/: README.md
End-to-end-ASR-Pytorch/: README.md  command-rm  main.py  mySpecs.html
End-to-end-ASR-Pytorch/config/libri/: asr_example.yaml  asr_example_portuguese.yaml  asr_hybrid.yaml  asr_hybrid_marcelo.yaml  decode_example.yaml  lm_example.yaml  lm_example_portuguese.yaml
End-to-end-ASR-Pytorch/corpus/: librispeech.py
End-to-end-ASR-Pytorch/result/: decode_example_dev_output.csv  decode_example_portuguese_dev_beam-20-0.5.csv  decode_example_portuguese_dev_output.csv  decode_example_portuguese_test_beam-20-0.5.csv  decode_example_portuguese_test_output.csv  decode_example_test_output.csv
End-to-end-ASR-Pytorch/src/: data.py
MapaDeProfundidade/: README.md  View3dPointCloud.py  deep_mapper.py  infer_video_colab.py  raw_data_downloader.sh
MapaDeProfundidade/python_on_c/: call  load_python.cpp
SleepingDetection/: CMakeLists.txt  README.md
SleepingDetection/lib/caffe/: CMakeLists.txt  caffednn.cpp  caffednn.h
SleepingDetection/net_models/eyes/: deploy.prototxt  labels.txt  mean.binaryproto  snapshot.caffemodel  solver.prototxt  train_val.prototxt
SleepingDetection/src/: face_detector.cpp  face_detector.h  sleeping_detection_main.cpp
SleepingDetection/src/argparse/: argparse.hpp
